appDisplay: Use a proper string key for the app search provider

Since we're going to be caching results based on the result ID,
we need to return a string-based result ID to cache on.

https://bugzilla.gnome.org/show_bug.cgi?id=704912
https://github.com/GNOME/gnome-shell/commit/27cac10d0c63599f9f4eb0bd69125da66ef1bbc1